Bug 948005 - Release reasources in MediaOmxReader's destructor. r=doublec